--- a/package.json
+++ b/package.json
@@ -23,20 +23,18 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
-    "angularfire2": "^4.0.0-rc0",
-    "core-js": "^2.4.1",
-    "firebase": "^3.9.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.9",
+    "core-js": "^2.5.3",
     "hammerjs": "^2.0.8",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "rxjs": "^5.5.6",
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0",
     "@angular/compiler-cli": "^4.0.0",
     "@types/hammerjs": "^2.0.35",
     "@types/jasmine": "2.5.38",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.96",
     "bootstrap-sass": "3.3.7",
     "codelyzer": "~2.0.0",
     "jasmine-core": "~2.5.2",
